--- a/modules/app/src/main/res/menu/student_drawer.xml
+++ b/modules/app/src/main/res/menu/student_drawer.xml
@@ -15,18 +15,18 @@
         <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_menu_schedule"
-            android:title="Schedule" />
+            android:title="My Schedule" />
         <item
             android:id="@+id/nav_grades"
             android:icon="@drawable/ic_menu_grades"
-            android:title="Grades" />
+            android:title="My Grades" />
         <item
             android:id="@+id/nav_messages"
             android:icon="@drawable/ic_menu_messages"
             android:title="Messages" />
     </item>
 
-    <item android:title="Information">
+    <item android:title="Public information">
         <menu>
             <item
                 android:id="@+id/nav_professors"
