--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activities.implementations.student.StudentActivity">
+    tools:context=".activities.abstractions.FirebaseConnectedActivity">
 
     <data>
 
@@ -42,42 +42,68 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <include
                     android:id="@+id/profileImage"
                     layout="@layout/rounded_image"
-                    app:editing="@{editing}"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     app:defaultImage="@{Utils.getDefaultPersonImageForName(student.firstName)}"
+                    app:editing="@{editing}"
                     app:image="@{profileImageContent.fileContentBase64}"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:size="@{200}" />
 
-                <TextView
-                    android:id="@+id/titleProfileLayout"
-                    style="@style/DarkSubtitleShadowed"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:gravity="center"
-                    android:text="@{student.lastName + ` ` + student.firstName}"
-                    app:layout_constraintTop_toBottomOf="@id/profileImage" />
+                    android:orientation="horizontal">
+
+                    <EditText
+                        style="@style/EntityActivityTitleHiddenEditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{false}"
+                        android:gravity="end"
+                        android:hint="@{editing &amp;&amp; (student.firstName == null || student.firstName.length() == 0)? `First name` : ``}"
+                        android:importantForAutofill="no"
+                        android:onClick="tapEditText"
+                        android:text="@={student.firstName}"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        style="@style/EntityActivityTitleHiddenEditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:text=" " />
+
+                    <EditText
+                        style="@style/EntityActivityTitleHiddenEditText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{false}"
+                        android:gravity="start"
+                        android:hint="@{editing &amp;&amp; (student.lastName == null || student.lastName.length() == 0)? `Last name` : ``}"
+                        android:importantForAutofill="no"
+                        android:onClick="tapEditText"
+                        android:text="@={student.lastName}"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/profileEmailLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:gravity="center"
-                    android:weightSum="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/titleProfileLayout">
+                    android:weightSum="1">
 
                     <TextView
                         style="@style/DarkBlueShadowedH3"
@@ -88,40 +114,52 @@
                         android:text="Email: " />
 
                     <EditText
-                        android:id="@+id/profileEmailEditText"
-                        style="@style/DarkBlueShadowedH3"
+                        style="@style/ProfileActivityField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:enabled="false"
+                        android:layout_weight="0.6"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{editing}"
+                        android:hint="@{editing &amp;&amp; (student.email == null || student.email.length() == 0)? `Enter level` : `(none)`}"
                         android:inputType="textEmailAddress"
-                        android:text="@{student.email}" />
-
-                    <ImageView
-                        android:id="@+id/profileEmailEditButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        app:srcCompat="@drawable/ic_edit" />
-
-                    <ImageView
-                        android:id="@+id/profileEmailCancelButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        android:visibility="invisible"
-                        app:srcCompat="@drawable/ic_cancel" />
-
+                        android:onClick="tapEditText"
+                        android:text="@={student.email}" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/profilePhoneLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:weightSum="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/profileEmailLayout">
+                    android:weightSum="1">
+
+                    <TextView
+                        style="@style/DarkBlueShadowedH3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.3"
+                        android:gravity="end|center"
+                        android:text="Website: " />
+
+                    <EditText
+                        style="@style/ProfileActivityField"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.6"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{editing}"
+                        android:hint="@{editing &amp;&amp; (student.website == null || student.website.length() == 0)? `Enter website` : `(none)`}"
+                        android:inputType="textUri"
+                        android:onClick="tapEditText"
+                        android:text="@={student.website}" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center"
+                    android:weightSum="1">
 
                     <TextView
                         style="@style/DarkBlueShadowedH3"
@@ -132,40 +170,24 @@
                         android:text="Phone number: " />
 
                     <EditText
-                        android:id="@+id/profilePhoneEditText"
-                        style="@style/DarkBlueShadowedH3"
+                        style="@style/ProfileActivityField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:enabled="false"
+                        android:layout_weight="0.6"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{editing}"
+                        android:hint="@{editing &amp;&amp; (student.phoneNumber == null || student.phoneNumber.length() == 0)? `Enter phone number` : `(none)`}"
                         android:inputType="phone"
-                        android:text="@{student.phoneNumber}" />
-
-                    <ImageView
-                        android:id="@+id/profilePhoneEditButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        app:srcCompat="@drawable/ic_edit" />
-
-                    <ImageView
-                        android:id="@+id/profilePhoneCancelButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        android:visibility="invisible"
-                        app:srcCompat="@drawable/ic_cancel" />
-
+                        android:onClick="tapEditText"
+                        android:text="@={student.phoneNumber}" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/profileYearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:weightSum="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/profilePhoneLayout">
+                    android:weightSum="1">
 
                     <TextView
                         style="@style/DarkBlueShadowedH3"
@@ -176,40 +198,25 @@
                         android:text="Year: " />
 
                     <EditText
-                        android:id="@+id/profileGroupEditText"
-                        style="@style/DarkBlueShadowedH3"
+                        android:id="@+id/studentProfileYearInput"
+                        style="@style/ProfileActivityField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:enabled="false"
-                        android:inputType="textEmailAddress"
+                        android:layout_weight="0.6"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{false}"
+                        android:hint="@{editing &amp;&amp; (student.cycleSpecializationYear == null)? `Enter year` : `(none)`}"
+                        android:inputType="phone"
+                        android:onClick="tapEditText"
                         android:text="@{student.cycleSpecializationYear.toString()}" />
-
-                    <ImageView
-                        android:id="@+id/profileYearEditButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        app:srcCompat="@drawable/ic_edit" />
-
-                    <ImageView
-                        android:id="@+id/profileYearCancelButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        android:visibility="invisible"
-                        app:srcCompat="@drawable/ic_cancel" />
-
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/profileGroupLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
                     android:gravity="center"
-                    android:weightSum="1"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/profileYearLayout">
+                    android:weightSum="1">
 
                     <TextView
                         style="@style/DarkBlueShadowedH3"
@@ -220,69 +227,58 @@
                         android:text="Group: " />
 
                     <EditText
-                        android:id="@+id/profileYearEditText"
-                        style="@style/DarkBlueShadowedH3"
+                        android:id="@+id/studentProfileGroupInput"
+                        style="@style/ProfileActivityField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:enabled="false"
-                        android:inputType="textEmailAddress"
+                        android:layout_weight="0.6"
+                        android:background="@{editing? @drawable/edit_text_background : null}"
+                        android:focusable="@{false}"
+                        android:hint="@{editing &amp;&amp; (student.group == null || student.group.length() == 0)? `Enter group` : `(none)`}"
+                        android:inputType="phone"
+                        android:onClick="tapEditText"
                         android:text="@{student.group}" />
-
-                    <ImageView
-                        android:id="@+id/profileGroupEditButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        app:srcCompat="@drawable/ic_edit" />
-
-                    <ImageView
-                        android:id="@+id/profileGroupCancelButton"
-                        android:layout_width="@dimen/dim_0dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="0.1"
-                        android:visibility="invisible"
-                        app:srcCompat="@drawable/ic_cancel" />
-
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:orientation="vertical"
-                    app:layout_constraintLeft_toLeftOf="@id/titleProfileLayout"
-                    app:layout_constraintTop_toBottomOf="@id/profileGroupLayout">
+                    android:orientation="vertical">
 
                     <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                        android:id="@+id/personalCoursesCategory"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:canAdd="@{false}"
                         android:categoryTitle="@{`My courses`}"
                         android:childEntities="@{personalCourses}"
-                        android:entityName="@{`optional course`}"
+                        android:editing="@{editing}"
                         android:permissionLevel="@{PermissionLevel.WRITE_PARTIAL}"
                         android:showEmpty="@{true}"
                         android:unlinkable="@{true}" />
 
                     <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                        android:id="@+id/personalActivitiesCategory"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:canAdd="@{false}"
                         android:categoryTitle="@{`My activities`}"
                         android:childEntities="@{personalActivities}"
-                        android:entityName="@{`activity`}"
+                        android:editing="@{editing}"
                         android:permissionLevel="@{PermissionLevel.WRITE_PARTIAL}"
                         android:showEmpty="@{true}"
                         android:unlinkable="@{true}" />
 
                 </LinearLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
 
         </ScrollView>
 
         <include
             layout="@layout/entity_activity_floating_buttons"
             app:editing="@{editing}"
-            app:permissionLevel="@{PermissionLevel.WRITE}" />
+            app:permissionLevel="@{PermissionLevel.WRITE_PARTIAL}" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
