--- a/modules/app/src/main/res/layouts/fragments/layout/student_enroll_discipline_layout.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/student_enroll_discipline_layout.xml
@@ -22,6 +22,7 @@
             android:text="@{enrollRequestSent?`You have already send an enrollment request for this discipline`:`You are not enrolled in this discipline`, default=`You are not enrolled in this discipline`}" />
 
         <Button
+            android:id="@+id/disciplineEnrollButton"
             style="@style/BlueRoundButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
