--- a/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
@@ -162,6 +162,7 @@
                     android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_TITLE_COMPARATOR}"
                     android:editing="@{editing}"
                     android:entityName="@{`students`}"
+                    android:showAddButtonFirstLayer="@{true}"
                     android:permissionLevel="@{permissionLevel}"
                     android:showEmpty="@{false}"
                     android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.courseStudentCategories((CategoryViewModel) category, entity)}"
