--- a/modules/app/src/main/res/layouts/fragments/layout/student_enroll_discipline_layout.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/student_enroll_discipline_layout.xml
@@ -3,6 +3,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="enrollRequestSent"
             type="Boolean" />
@@ -11,9 +13,11 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/dim_16dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/dotted_transparent_background"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
             style="@style/DarkSubtitle"
@@ -27,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dim_8dp"
-            android:enabled="@{!enrollRequestSent}"
-            android:text="Send enrollment request" />
+            android:text="Request Enrollment"
+            android:visibility="@{enrollRequestSent?View.GONE : View.VISIBLE}" />
 
     </LinearLayout>
 </layout>
